--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,16 +1,33 @@
 <div class="header">
   <div class="inner">
     <div class="logo">
-        <a href="">
-            <img src="../../../assets/images/logo.png" alt="logo">
-        </a>
+      <a href="">
+        <img src="../../../assets/images/logo.png" alt="logo">
+      </a>
     </div>
     <div class="divider"></div>
     <ul class="header-manu">
-        <li class="manu-item" [routerLink]="['/appointments']"  routerLinkActive="active" >Workspace</li>
-        <li class="manu-item" [routerLink]="['/demo']"  routerLinkActive="active">Billing</li>
+      <li class="manu-item" [routerLink]="['/appointments']" routerLinkActive="active">Workspace</li>
+      <li class="manu-item" [routerLink]="['/demo']" routerLinkActive="active">Billing</li>
     </ul>
+    <button class="ml-3 p-button p-button-rounded" (click)="menu.toggle($event)" style="gap: 4px;">
+      <i class="pi pi-plus"></i>
+      New
+      <i class="pi pi-angle-down"></i>
+    </button>
+    <p-menu #menu [popup]="true" [model]="items"></p-menu>    
     <div class="header-right">
+      <div class="header-button">
+        <button pButton pRipple type="button" icon="pi pi-search"
+          class="p-button-rounded p-button-secondary p-button-text"></button>
+        <button pButton pRipple type="button" icon="pi pi-microsoft"
+          class="p-button-rounded p-button-secondary p-button-text"></button>
+        <button pButton pRipple type="button" icon="pi pi-bell"
+          class="p-button-rounded p-button-secondary p-button-text"></button>
+        <p-avatar label="A T" styleClass="p-mr-2" 
+          [style]="{'background-color':'#2196F3', 'color': '#ffffff'}" shape="circle"></p-avatar>
+
+      </div>
     </div>
   </div>
 </div>
