--- a/src/app/pages/appointments/appointments.component.html
+++ b/src/app/pages/appointments/appointments.component.html
@@ -1,6 +1,6 @@
 <div class="inner-box">
   <div class="main-title">
-      <h3 class="title">Appointments</h3>
+      <h3 class="title">Appointment(s)</h3>
   </div>
   <div class="toolbar toolbar-style">
       <div class="left-toolbar">
